# TranscribeAi

./: .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TranscribeAi.sln  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  test_backend_startup.py
.github/workflows/: keep-alive.yml
TranscribeAi.BusinessObject/: GlobalUsings.cs
TranscribeAi.BusinessObject/Entities/: AISummary.cs  ActionItem.cs  ApplicationUser.cs  AuditLog.cs  ChatMessage.cs  Feedback.cs  TranscriptionJob.cs
TranscribeAi.BusinessObject/Enums/: AuditAction.cs  JobMode.cs  JobStatus.cs  UserPlan.cs
TranscribeAi.DataAccessLayer/: GlobalUsings.cs  TranscribeAi.DataAccessLayer.csproj
TranscribeAi.DataAccessLayer/Configurations/: ApplicationUserConfiguration.cs  (+2 more)
TranscribeAi.Services/: GlobalUsings.cs  TranscribeAi.Services.csproj
TranscribeAi.Tests/: ActionServiceTests.cs  SummaryServiceTests.cs  TranscribeAi.Tests.csproj  TranscriptionServiceTests.cs
TranscribeAi.Web/: GlobalUsings.cs  Program.cs  TranscribeAi.Web.csproj  appsettings.Development.json  appsettings.json
TranscribeAi.Worker/: GlobalUsings.cs  Program.cs  TranscribeAi.Worker.csproj
WhisperApi/: main.py
app/: __init__.py  config.py  main.py  schemas.py
backend/: Dockerfile  requirements.txt
deploy/: docker-compose.yml
docs/: API_GUIDE.md  architecture.md
extension/: manifest.json
frontend/: index.html  package-lock.json  package.json
scripts/: dev.sh  run.sh  run_local.sh  setup.sh  vercel-ignore.sh
supabase/: schema.sql
tests/: __init__.py  test_merge.py
(+123 files in other folders)
