[project]
name = "TranscribeAI"
version = "0.1.0"
description = "Multi-agent speech-to-text transcription system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "TranscribeAI Team" }
]

[tool.ruff]
# Target version for Python
target-version = "py311"
# Line length
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), Isort (I)
select = ["F", "E", "W", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
# Prefer double quotes for consistency
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Trim trailing whitespace
skip-magic-trailing-comma = false
# Use LF
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
]
